--- a/.github/workflows/import-data.yaml
+++ b/.github/workflows/import-data.yaml
@@ -1,7 +1,6 @@
 on:
   push:
-    branches:
-      - main
+    branches: main
 
 jobs:
   import-data:
@@ -14,8 +13,8 @@ jobs:
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages: |
-            tidyverse 
-            googlesheets4
+            any::tidyverse 
+            any::googlesheets4
 
       - name: Check out repository
         uses: actions/checkout@v3
@@ -27,6 +26,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add /github_action_test1/data/event_reg.rds
+          git add event_reg.rds
           git commit -m 'Data updated' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
