--- a/.github/workflows/import-data.yaml
+++ b/.github/workflows/import-data.yaml
@@ -26,6 +26,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add event_reg.rds
+          git add data/event_reg.rds
           git commit -m 'Data updated' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
